# dermalert-ml

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebook/: skin_cancer_training.ipynb
notebooks/src/: count_diagnosis_by_step.ipynb  show_diagnosis_types.ipynb
skincancer/: config.py
skincancer/cli/: infer.py  train.py
skincancer/data/: dataset.py  download.py  transforms.py
skincancer/engine/: evaluate.py  train.py
skincancer/models/: factory.py
skincancer/utils/: metrics.py
src/: skin_cancer_training.ipynb
