[project]
name = "dermalert-ml"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "albumentations>=2.0.6",
    "isic-cli>=12.1.0",
    "matplotlib>=3.10.1",
    "notebook>=7.4.1",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "timm>=1.0.15",
    "tqdm>=4.67.1",
]
